2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c (setup_dialog): Don't hide
	opacity controls
	(dialog_button_clicked_cb): Apply settings after commiting the
	change set

	* background.schema: Added wallpaper-enabled

	* background-properties-capplet.c (create_dialog): Use
	prefs_widget rather than preview placeholder widget

2001-12-07  Bradford Hovinen  <hovinen@ximian.com>

	* background.schema: Fix default values

	* background-properties-capplet.c (main): Connect the destroy
	signal

	* background.schema: Fix type on opacity schema

	* background-properties-capplet.c (main): Remove use of
	capplet_init, instead do the initialization ourselves (note: this
	means we are no longer a Bonobo control)
	(dialog_button_clicked_cb): Implement
	(main): Show the dialog when we are done constructing it
	(main): NULL-terminate the dialog construction parameters

2001-10-19  Jakub Steiner <jimmac@ximian.com>

	* background-capplet.png: more clear brush

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am ($(oaffile)): Make creation of the .oaf file generic

	* applier.c (render_to_screen): Use standard gdk and gdk_pixbuf
	rather than xlib and gdk_pixbuf_xlib
	(make_root_pixmap): Create a GdkPixmap
	(set_root_pixmap): Accept GdkPixmap and convert to X id

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (preferences_load_from_bonobo_db):
	(preferences_load_from_bonobo_pbag): Use BONOBO_RET_EX rather than
	RETURN_IF_EX; remove the definition of the latter macro

	* applier.c (fill_gradient): Copied from control center 1.4.0
	(render_background): Create the pixbuf first and then pass to
	fill_gradient
	(render_to_screen): Use XLIB_RGB_DITHER_MAX rather than
	GDK_RGB_DITHER_NORMAL

	* Makefile.am: Change the binary name to
	background-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named
	background-properties-capplet
	Remove support for disabling bonobo-conf build
