@@ -4,6 +4,11 @@
 	opacity controls
 	(dialog_button_clicked_cb): Apply settings after commiting the
 	change set
+	(peditor_value_changed): Implement
+	(setup_dialog): Connect value-changed signals
+	(setup_dialog): Store the applier in the preferences object
+	(peditor_value_changed): Retrieve the applier from the preferences
+	object and use it to apply settings on the preview widget
 
 	* background.schema: Added wallpaper-enabled
 
